crates/anvil-tui/src/surfaces/tutorial/snapshots/anvil_tui__surfaces__tutorial__render__tests__snapshot_running_phase.snap
---
source: crates/anvil-tui/src/surfaces/tutorial/render.rs
expression: "crate::test_utils::snapshot::buffer_to_string(&buf)"
---
[[fg:#D95A00,bold]‡[fg:#D95A00,bold]][fg:#D95A00,bold] a[fg:#D95A00,bold]n[fg:#D95A00,bold]v[fg:#D95A00,bold]i[fg:#D95A00,bold]l[fg:#D95A00,bold] [fg:#85858A]>[fg:#85858A] [fg:#85858A]T[fg:#EBEBEB]u[fg:#EBEBEB]t[fg:#EBEBEB]o[fg:#EBEBEB]r[fg:#EBEBEB]i[fg:#EBEBEB]a[fg:#EBEBEB]l[fg:#EBEBEB]                                                            
                                                                                
  P[fg:#D95A00,bold]o[fg:#D95A00,bold]l[fg:#D95A00,bold]i[fg:#D95A00,bold]c[fg:#D95A00,bold]y[fg:#D95A00,bold] [fg:#D95A00,bold]c[fg:#D95A00,bold]h[fg:#D95A00,bold]e[fg:#D95A00,bold]c[fg:#D95A00,bold]k[fg:#D95A00,bold]s[fg:#D95A00,bold] [fg:#85858A] [fg:#85858A]·[fg:#85858A] [fg:#85858A] [fg:#85858A]S[fg:#EBEBEB]t[fg:#EBEBEB]e[fg:#EBEBEB]p[fg:#EBEBEB] [fg:#EBEBEB]1[fg:#EBEBEB] [fg:#EBEBEB]o[fg:#EBEBEB]f[fg:#EBEBEB] [fg:#EBEBEB]6[fg:#EBEBEB]                                                 
  ◉[fg:#D95A00,bold] [fg:#85858A] [fg:#85858A]○[fg:#85858A] [fg:#85858A] [fg:#85858A]○[fg:#85858A] [fg:#85858A] [fg:#85858A]○[fg:#85858A] [fg:#85858A] [fg:#85858A]○[fg:#85858A] [fg:#85858A] [fg:#85858A]○[fg:#85858A]                                                              
                                                                                
  ┌[fg:#D95A00] [fg:#D95A00]I[fg:#D95A00]n[fg:#D95A00]t[fg:#D95A00]r[fg:#D95A00]o[fg:#D95A00]d[fg:#D95A00]u[fg:#D95A00]c[fg:#D95A00]t[fg:#D95A00]i[fg:#D95A00]o[fg:#D95A00]n[fg:#D95A00] [fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]┐[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  │[fg:#D95A00] P[fg:#EBEBEB]o[fg:#EBEBEB]l[fg:#EBEBEB]i[fg:#EBEBEB]c[fg:#EBEBEB]i[fg:#EBEBEB]e[fg:#EBEBEB]s[fg:#EBEBEB] [fg:#EBEBEB]a[fg:#EBEBEB]r[fg:#EBEBEB]e[fg:#EBEBEB] [fg:#EBEBEB]t[fg:#EBEBEB]h[fg:#EBEBEB]e[fg:#EBEBEB] [fg:#EBEBEB]r[fg:#EBEBEB]u[fg:#EBEBEB]l[fg:#EBEBEB]e[fg:#EBEBEB]s[fg:#EBEBEB] [fg:#EBEBEB]t[fg:#EBEBEB]h[fg:#EBEBEB]a[fg:#EBEBEB]t[fg:#EBEBEB] [fg:#EBEBEB]a[fg:#EBEBEB]n[fg:#EBEBEB]v[fg:#EBEBEB]i[fg:#EBEBEB]l[fg:#EBEBEB] [fg:#EBEBEB]e[fg:#EBEBEB]n[fg:#EBEBEB]f[fg:#EBEBEB]o[fg:#EBEBEB]r[fg:#EBEBEB]c[fg:#EBEBEB]e[fg:#EBEBEB]s[fg:#EBEBEB] [fg:#EBEBEB]o[fg:#EBEBEB]n[fg:#EBEBEB] [fg:#EBEBEB]y[fg:#EBEBEB]o[fg:#EBEBEB]u[fg:#EBEBEB]r[fg:#EBEBEB] [fg:#EBEBEB]c[fg:#EBEBEB]o[fg:#EBEBEB]d[fg:#EBEBEB]e[fg:#EBEBEB]b[fg:#EBEBEB]a[fg:#EBEBEB]s[fg:#EBEBEB]e[fg:#EBEBEB].[fg:#EBEBEB] [fg:#EBEBEB]E[fg:#EBEBEB]a[fg:#EBEBEB]c[fg:#EBEBEB]h[fg:#EBEBEB] [fg:#EBEBEB]p[fg:#EBEBEB]o[fg:#EBEBEB]l[fg:#EBEBEB]i[fg:#EBEBEB]c[fg:#EBEBEB]y[fg:#EBEBEB] │[fg:#D95A00]  
  │[fg:#D95A00] i[fg:#EBEBEB]s[fg:#EBEBEB] [fg:#EBEBEB]a[fg:#EBEBEB] [fg:#EBEBEB]R[fg:#EBEBEB]e[fg:#EBEBEB]g[fg:#EBEBEB]o[fg:#EBEBEB] [fg:#EBEBEB]f[fg:#EBEBEB]i[fg:#EBEBEB]l[fg:#EBEBEB]e[fg:#EBEBEB] [fg:#EBEBEB]([fg:#EBEBEB].[fg:#EBEBEB]r[fg:#EBEBEB]e[fg:#EBEBEB]g[fg:#EBEBEB]o[fg:#EBEBEB])[fg:#EBEBEB] [fg:#EBEBEB]t[fg:#EBEBEB]h[fg:#EBEBEB]a[fg:#EBEBEB]t[fg:#EBEBEB] [fg:#EBEBEB]d[fg:#EBEBEB]e[fg:#EBEBEB]s[fg:#EBEBEB]c[fg:#EBEBEB]r[fg:#EBEBEB]i[fg:#EBEBEB]b[fg:#EBEBEB]e[fg:#EBEBEB]s[fg:#EBEBEB] [fg:#EBEBEB]w[fg:#EBEBEB]h[fg:#EBEBEB]a[fg:#EBEBEB]t[fg:#EBEBEB] [fg:#EBEBEB]t[fg:#EBEBEB]o[fg:#EBEBEB] [fg:#EBEBEB]c[fg:#EBEBEB]h[fg:#EBEBEB]e[fg:#EBEBEB]c[fg:#EBEBEB]k[fg:#EBEBEB] [fg:#EBEBEB]a[fg:#EBEBEB]n[fg:#EBEBEB]d[fg:#EBEBEB] [fg:#EBEBEB]h[fg:#EBEBEB]o[fg:#EBEBEB]w[fg:#EBEBEB] [fg:#EBEBEB]s[fg:#EBEBEB]e[fg:#EBEBEB]v[fg:#EBEBEB]e[fg:#EBEBEB]r[fg:#EBEBEB]e[fg:#EBEBEB]l[fg:#EBEBEB]y[fg:#EBEBEB] [fg:#EBEBEB]t[fg:#EBEBEB]o[fg:#EBEBEB]  │[fg:#D95A00]  
  │[fg:#D95A00] f[fg:#EBEBEB]l[fg:#EBEBEB]a[fg:#EBEBEB]g[fg:#EBEBEB] [fg:#EBEBEB]v[fg:#EBEBEB]i[fg:#EBEBEB]o[fg:#EBEBEB]l[fg:#EBEBEB]a[fg:#EBEBEB]t[fg:#EBEBEB]i[fg:#EBEBEB]o[fg:#EBEBEB]n[fg:#EBEBEB]s[fg:#EBEBEB] [fg:#EBEBEB]u[fg:#EBEBEB]s[fg:#EBEBEB]i[fg:#EBEBEB]n[fg:#EBEBEB]g[fg:#EBEBEB] [fg:#EBEBEB]t[fg:#EBEBEB]h[fg:#EBEBEB]e[fg:#EBEBEB] [fg:#EBEBEB]O[fg:#EBEBEB]p[fg:#EBEBEB]e[fg:#EBEBEB]n[fg:#EBEBEB] [fg:#EBEBEB]P[fg:#EBEBEB]o[fg:#EBEBEB]l[fg:#EBEBEB]i[fg:#EBEBEB]c[fg:#EBEBEB]y[fg:#EBEBEB] [fg:#EBEBEB]A[fg:#EBEBEB]g[fg:#EBEBEB]e[fg:#EBEBEB]n[fg:#EBEBEB]t[fg:#EBEBEB] [fg:#EBEBEB]([fg:#EBEBEB]O[fg:#EBEBEB]P[fg:#EBEBEB]A[fg:#EBEBEB])[fg:#EBEBEB] [fg:#EBEBEB]e[fg:#EBEBEB]n[fg:#EBEBEB]g[fg:#EBEBEB]i[fg:#EBEBEB]n[fg:#EBEBEB]e[fg:#EBEBEB].[fg:#EBEBEB]                │[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  │[fg:#D95A00] P[fg:#D95A00,bold]r[fg:#D95A00,bold]e[fg:#D95A00,bold]s[fg:#D95A00,bold]s[fg:#D95A00,bold] [fg:#D95A00,bold]e[fg:#D95A00,bold]n[fg:#D95A00,bold]t[fg:#D95A00,bold]e[fg:#D95A00,bold]r[fg:#D95A00,bold] [fg:#D95A00,bold]t[fg:#D95A00,bold]o[fg:#D95A00,bold] [fg:#D95A00,bold]c[fg:#D95A00,bold]o[fg:#D95A00,bold]n[fg:#D95A00,bold]t[fg:#D95A00,bold]i[fg:#D95A00,bold]n[fg:#D95A00,bold]u[fg:#D95A00,bold]e[fg:#D95A00,bold] [fg:#D95A00,bold]t[fg:#D95A00,bold]o[fg:#D95A00,bold] [fg:#D95A00,bold]t[fg:#D95A00,bold]h[fg:#D95A00,bold]e[fg:#D95A00,bold] [fg:#D95A00,bold]n[fg:#D95A00,bold]e[fg:#D95A00,bold]x[fg:#D95A00,bold]t[fg:#D95A00,bold] [fg:#D95A00,bold]s[fg:#D95A00,bold]t[fg:#D95A00,bold]e[fg:#D95A00,bold]p[fg:#D95A00,bold].[fg:#D95A00,bold]                                │[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  └[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]┘[fg:#D95A00]  
e[fg:#85858A]n[fg:#85858A]t[fg:#85858A]e[fg:#85858A]r[fg:#85858A] [fg:#85858A]n[fg:#85858A]e[fg:#85858A]x[fg:#85858A]t[fg:#85858A] [fg:#85858A] [fg:#85858A]s[fg:#85858A]p[fg:#85858A]a[fg:#85858A]c[fg:#85858A]e[fg:#85858A] [fg:#85858A]n[fg:#85858A]e[fg:#85858A]x[fg:#85858A]t[fg:#85858A] [fg:#85858A] [fg:#85858A]e[fg:#85858A]s[fg:#85858A]c[fg:#85858A] [fg:#85858A]p[fg:#85858A]a[fg:#85858A]t[fg:#85858A]h[fg:#85858A]s[fg:#85858A] [fg:#85858A] [fg:#85858A]q[fg:#85858A] [fg:#85858A]q[fg:#85858A]u[fg:#85858A]i[fg:#85858A]t[fg:#85858A]                  [[fg:#85858A]‡[fg:#85858A]][fg:#85858A] [fg:#85858A]a[fg:#85858A] [fg:#85858A]n[fg:#85858A] [fg:#85858A]v[fg:#85858A] [fg:#85858A]i[fg:#85858A] [fg:#85858A]l[fg:#85858A] [fg:#85858A] [fg:#85858A]v[fg:#85858A]X[fg:#85858A].[fg:#85858A]Y[fg:#85858A].[fg:#85858A]Z[fg:#85858A]
