crates/anvil-tui/src/surfaces/tutorial/snapshots/anvil_tui__surfaces__tutorial__render__tests__snapshot_running_phase_tiny_20x10.snap
---
source: crates/anvil-tui/src/surfaces/tutorial/render.rs
expression: "crate::test_utils::snapshot::buffer_to_string(&buf)"
---
[[fg:#D95A00,bold]‡[fg:#D95A00,bold]][fg:#D95A00,bold] a[fg:#D95A00,bold]n[fg:#D95A00,bold]v[fg:#D95A00,bold]i[fg:#D95A00,bold]l[fg:#D95A00,bold] [fg:#85858A]>[fg:#85858A] [fg:#85858A]T[fg:#EBEBEB]u[fg:#EBEBEB]t[fg:#EBEBEB]o[fg:#EBEBEB]r[fg:#EBEBEB]i[fg:#EBEBEB]a[fg:#EBEBEB]l[fg:#EBEBEB]
                    
  P[fg:#D95A00,bold]o[fg:#D95A00,bold]l[fg:#D95A00,bold]i[fg:#D95A00,bold]c[fg:#D95A00,bold]y[fg:#D95A00,bold] [fg:#D95A00,bold]c[fg:#D95A00,bold]h[fg:#D95A00,bold]e[fg:#D95A00,bold]c[fg:#D95A00,bold]k[fg:#D95A00,bold]s[fg:#D95A00,bold] [fg:#85858A] [fg:#85858A]·[fg:#85858A]  
  ┌[fg:#D95A00] [fg:#D95A00]I[fg:#D95A00]n[fg:#D95A00]t[fg:#D95A00]r[fg:#D95A00]o[fg:#D95A00]d[fg:#D95A00]u[fg:#D95A00]c[fg:#D95A00]t[fg:#D95A00]i[fg:#D95A00]o[fg:#D95A00]n[fg:#D95A00] [fg:#D95A00]┐[fg:#D95A00]  
  │[fg:#D95A00]              │[fg:#D95A00]  
  │[fg:#D95A00] P[fg:#EBEBEB]o[fg:#EBEBEB]l[fg:#EBEBEB]i[fg:#EBEBEB]c[fg:#EBEBEB]i[fg:#EBEBEB]e[fg:#EBEBEB]s[fg:#EBEBEB] [fg:#EBEBEB]a[fg:#EBEBEB]r[fg:#EBEBEB]e[fg:#EBEBEB] │[fg:#D95A00]  
  │[fg:#D95A00] t[fg:#EBEBEB]h[fg:#EBEBEB]e[fg:#EBEBEB] [fg:#EBEBEB]r[fg:#EBEBEB]u[fg:#EBEBEB]l[fg:#EBEBEB]e[fg:#EBEBEB]s[fg:#EBEBEB]    │[fg:#D95A00]  
  │[fg:#D95A00] t[fg:#EBEBEB]h[fg:#EBEBEB]a[fg:#EBEBEB]t[fg:#EBEBEB] [fg:#EBEBEB]a[fg:#EBEBEB]n[fg:#EBEBEB]v[fg:#EBEBEB]i[fg:#EBEBEB]l[fg:#EBEBEB]   │[fg:#D95A00]  
  └[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]┘[fg:#D95A00]  
[[fg:#85858A]‡[fg:#85858A]][fg:#85858A] [fg:#85858A]a[fg:#85858A] [fg:#85858A]n[fg:#85858A] [fg:#85858A]v[fg:#85858A] [fg:#85858A]i[fg:#85858A] [fg:#85858A]l[fg:#85858A] [fg:#85858A] [fg:#85858A]v[fg:#85858A]X[fg:#85858A].[fg:#85858A]Y[fg:#85858A].[fg:#85858A]
